[package]
name = "ms_auth_mc"
version = "0.4.1"
edition = "2021"
description = "A library for logging into a minecraft account by using the microsoft oauth2 device flow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/comblock/ms_auth_mc"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"
byteorder = "1.4"
base64 = "0.13"